metadata/force-app/main/default/objects/Removed_Quote_line_Item__c/Removed_Quote_line_Item__c.object-meta.xml
<CustomObject>
    <label>Removed Quote line Item</label>
    <nameField>
        <displayFormat>RQLI-{0000}</displayFormat>
        <label>Removed Quote lIne Items Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Removed Quote line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>