metadata/force-app/main/default/objects/Removed_Quote_line_Item__c/fields/AVA_SFCLOUD_SalesTax_Details__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCLOUD_SalesTax_Details__c</fullName>
    <label>Sales Tax Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>