metadata/force-app/main/default/objects/Removed_Quote_line_Item__c/fields/AVA_SFCLOUD_SalesTax_Rate__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCLOUD_SalesTax_Rate__c</fullName>
    <label>Sales Tax Rate</label>
    <length>18</length>
    <type>Text</type>
</CustomField>