metadata/force-app/main/default/objects/Removed_Quote_line_Item__c/fields/Base_Price_ARR_One_off__c.field-meta.xml
<CustomField>
    <fullName>Base_Price_ARR_One_off__c</fullName>
    <formula>IF( Pricing_Factors_to_be_Applied__c,
Initial_Default_Price_ARR_One_off__c * (1 +  Quote__r.Applied_Cumulative_Indexation__c ) * (1 +  Quote__r.Applied_Upcoming_Indexation__c ) * (1 + Quote__r.Price_Uplift_on_Renewal_percentage__c),
Initial_Default_Price_ARR_One_off__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base Price ARR/One-off</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>