metadata/force-app/main/default/objects/Removed_Quote_line_Item__c/fields/Conga_RQLI_Fee__c.field-meta.xml
<CustomField>
    <fullName>Conga_RQLI_Fee__c</fullName>
    <description>BODEV-4103 Renewal Agreement - Quote (Conga Composer)
Created this field to return the Total Sales Price in negative value (Conga Purpose)</description>
    <formula>-(Sales_Price_ARR_One_off__c * Quantity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga RQLI Fee</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>