metadata/force-app/main/default/objects/Removed_Quote_line_Item__c/fields/Cumulative_Indexation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Indexation_Amount__c</fullName>
    <description>If Cumulative Indexation is applied, Total Initial Default Price ARR/One-off * Cumulative Indexation %, otherwise 0.</description>
    <formula>IF( Pricing_Factors_to_be_Applied__c &amp;&amp; Quote__r.Applied_Cumulative_Indexation__c !=null,
Total_Initial_Default_Price_ARR_One_off__c * Quote__r.Applied_Cumulative_Indexation__c,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cumulative Indexation Amount</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>