metadata/force-app/main/default/objects/Removed_Quote_line_Item__c/fields/For_Renewal__c.field-meta.xml
<CustomField>
    <fullName>For_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>For Renewal</label>
    <type>Checkbox</type>
</CustomField>