metadata/force-app/main/default/objects/Removed_Quote_line_Item__c/fields/Initial_Default_Price_ARR_One_off__c.field-meta.xml
<CustomField>
    <fullName>Initial_Default_Price_ARR_One_off__c</fullName>
    <label>Initial Default Price ARR/One-off</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>