metadata/force-app/main/default/objects/Removed_Quote_line_Item__c/fields/Line_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Description__c</fullName>
    <description>Description of the item, usually provided by end users</description>
    <label>Line Item Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>