metadata/force-app/main/default/objects/Removed_Quote_line_Item__c/fields/Parent_Solution_Product__c.field-meta.xml
<CustomField>
    <fullName>Parent_Solution_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Solution Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Removed Quote line Items (Parent Solution Product)</relationshipLabel>
    <relationshipName>Removed_Quote_line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>