metadata/force-app/main/default/objects/Removed_Quote_line_Item__c/fields/Part_of_Min_Commit__c.field-meta.xml
<CustomField>
    <fullName>Part_of_Min_Commit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Part of Min Commit?</label>
    <type>Checkbox</type>
</CustomField>