metadata/force-app/main/default/objects/Removed_Quote_line_Item__c/fields/Price_Book_Entry_ID__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Entry_ID__c</fullName>
    <description>The Price Book Entry ID for the Original QLI, required for Restoring the QLI</description>
    <label>Price Book Entry ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>