metadata/force-app/main/default/objects/Removed_Quote_line_Item__c/fields/Pricing_Factors_to_be_Applied__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Factors_to_be_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pricing Factors to be Applied?</label>
    <type>Checkbox</type>
</CustomField>