metadata/force-app/main/default/objects/Removed_Quote_line_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Removed_Quote_lIne_Items</relationshipName>
    <type>Lookup</type>
</CustomField>