metadata/force-app/main/default/objects/Removed_Quote_line_Item__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <formula>Text(Product__r.Product_Category__c)</formula>
    <label>Product Category</label>
    <type>Text</type>
</CustomField>