metadata/force-app/main/default/objects/Removed_Quote_line_Item__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <formula>TEXT(Product__r.Family)</formula>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>