metadata/force-app/main/default/objects/Removed_Quote_line_Item__c/fields/Renewal_OLI_ID__c.field-meta.xml
<CustomField>
    <fullName>Renewal_OLI_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal OLI ID</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipName>Removed_Quote_lIne_Items</relationshipName>
    <type>Lookup</type>
</CustomField>