metadata/force-app/main/default/objects/Removed_Quote_line_Item__c/fields/Sales_Price_ARR_One_off__c.field-meta.xml
<CustomField>
    <fullName>Sales_Price_ARR_One_off__c</fullName>
    <description>Sales Price in ARR or One-off per unit. When updated, Sales Price field should be updated by a flow, and vice versa.</description>
    <label>Sales Price ARR/One-off</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>