metadata/force-app/main/default/objects/Removed_Quote_line_Item__c/fields/Total_Additional_Price_Change__c.field-meta.xml
<CustomField>
    <fullName>Total_Additional_Price_Change__c</fullName>
    <description>&quot;Show additional manual price increase (&gt;0) or discount (&lt;0) given on top of the pricing factors.
Total Sales Price ARR/One-off - Total Base Price ARR/One-off&quot;</description>
    <formula>Total_Sales_Price_ARR_One_off__c - Total_Base_Price_ARR_One_off__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Additional Price Change</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>