metadata/force-app/main/default/objects/Removed_Quote_line_Item__c/fields/Total_Previous_Invoice_Price_ARR_One_off__c.field-meta.xml
<CustomField>
    <fullName>Total_Previous_Invoice_Price_ARR_One_off__c</fullName>
    <description>&quot;Total Sales Price incl. Cumulative Indexation. This goes to Subscription Fee from Previous Invoice on Renewal Agreement.
Total Initial Default Price ARR/One-off + Cumulative Indexation Amount&quot;</description>
    <formula>Total_Initial_Default_Price_ARR_One_off__c +  Cumulative_Indexation_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Previous Invoice Price ARR/One-off</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>