metadata/force-app/main/default/objects/Removed_Quote_line_Item__c/fields/Total_Price_Before_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_Before_Discount__c</fullName>
    <description>&quot;Show the total ARR/One-off price incl. all pricing factors and manual increase, but not discount.
Total Base ARR/One-off + MAX(Total Additioanl Price Change, 0)&quot;</description>
    <formula>Total_Base_Price_ARR_One_off__c + MAX( Total_Additional_Price_Change__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price Before Discount</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>