metadata/force-app/main/default/objects/Removed_Quote_line_Item__c/fields/Total_Sales_Price_ARR_One_off__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_Price_ARR_One_off__c</fullName>
    <description>Sales Price ARR/One-off * Quantity</description>
    <formula>Sales_Price_ARR_One_off__c *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Sales Price ARR/One-off</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>